--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Test
       run: |
-        go test -covermode=count -coverprofile=coverage.out -v ./... -bench=.
+        go test -covermode=count -coverprofile=coverage.out -v ./... -bench=. -benchmem
 
     - name: gosec
       run: |
